# mtbls-ws3

./: .dockerignore  .gitignore  .gitlab-ci.yml  .gitleaksignore  .pre-commit-config.yaml  404.html  Dockerfile  README.md  conftest.py  index.html  mkdocs.yml  model_MTBLS5195_base_1.json  model_MTBLS5195_output.json  mtbls-ws-config-secrets.yaml  mtbls-ws-config.yaml  pyproject.toml  sitemap.xml
design/architecture/: index.html
design/aspects/async_tasks/: index.html
design/aspects/auth/: index.html
design/aspects/configuration/: index.html
design/aspects/dependency_inversion/: index.html
design/aspects/logging/: index.html
development/general/: index.html
docs/: index.md
docs/design/: architecture.md
docs/design/aspects/: async_tasks.md  auth.md  caching.md  configuration.md  dependency_inversion.md  logging.md
docs/development/: general.md
docs/examples/api/: test_load_investigation.py
docs/examples/api/auth/: auth_backend.py  authorization_service.py  check_permission.py
docs/examples/api/dependency_injection/: override_container.py  override_endpoint.py  patch_validation_override.py  repository_container.py  run_validation_task.py
docs/examples/architecture/: run_validation.py  save_validation_report.py
examples/api/auth/: authentication_service.py
examples/api/dependency_injection/: override_container.py  override_endpoint.py  patch_validation_override.py  repository_container.py
examples/architecture/: run_validation.py
local/configs/submission/: submission_base_config.yaml
local/policy_service/: control_lists.json  mock_policy_service.py  rule_definitions.json
local/sqlite/: init_db.py  initial_data.sql
mtbls/: __init__.py
mtbls/application/context/: request_tracker.py
mtbls/application/decorators/: async_task.py
mtbls/application/remote_tasks/: __init__.py
mtbls/application/remote_tasks/common/: ping.py  run_modifier.py  run_validation.py  utils.py
mtbls/application/services/interfaces/: cache_service.py  data_index_client.py  health_check_service.py  http_client.py  ontology_search_service.py  policy_service.py  repository_provider.py  search_index_management_gateway.py  search_port.py  study_metadata_service.py  study_metadata_service_factory.py  study_search_service.py  validation_override_service.py  validation_report_service.py
mtbls/application/services/study_metadata_service/: db_metadata_collector.py  default_study_provider.py  models.py  repository_file_metadata_provider.py  repository_info_collector.py
mtbls/application/use_cases/mdp/: create_mdp_lookup_tables.py  model.py
mtbls/application/use_cases/reports/: index_data_files.py
mtbls/application/use_cases/study_status/: private_studies.py  release_date_report.py  utils.py
mtbls/application/use_cases/validation/: utils.py  validation_overrides.py  validation_reports.py  validation_task.py
mtbls/application/utils/: sort_utils.py
mtbls/domain/domain_services/: configuration_generator.py
mtbls/domain/domain_services/modifier/: assay_modifier.py  base_isa_modifier.py  base_isa_table_modifier.py  base_modifier.py  column_update_handler.py  investigation_modifier.py  maf_modifier.py  metabolights_study_model_modifier.py  sample_modifier.py
mtbls/domain/entities/: auth_user.py  base_entity.py  base_file_object.py  compound.py  http_response.py  investigation.py  isa_table.py  similar_compound.py  statistic.py  study.py  study_file.py  study_revision.py  user.py
mtbls/domain/entities/ontology/: ontology_search.py  ontology_term.py
mtbls/domain/entities/search/: index_search.py
mtbls/domain/entities/validation/: validation_configuration.py  validation_override.py  validation_report.py
mtbls/domain/enums/: curation_status.py  curation_type.py  default_resource_tag.py  entity.py  filter_operand.py  http_request_type.py  jwt_token_content.py  mhd_share_status.py  sort_order.py  study_category.py  study_revision_status.py  study_status.py  token_type.py  user_role.py  user_status.py
mtbls/domain/exceptions/: async_task.py  health_check.py  repository.py
mtbls/domain/shared/: data_types.py  mhd_configuration.py  models.py  modifier.py  permission.py  validation_result_file.py  value_mask.py
mtbls/domain/shared/async_task/: async_task_summary.py
mtbls/domain/shared/health_check/: transfer_status.py
mtbls/domain/shared/repository/: entity_filter.py  paginated_output.py  query_options.py  sort_option.py  study_bucket.py
mtbls/domain/shared/validator/: policy.py  run_configuration.py  types.py  validation.py
mtbls/infrastructure/auth/keycloak/: keycloak_authentication.py  keycloak_authentication_config.py
mtbls/infrastructure/auth/mtbls_ws2/: mtbls_ws2_authentication_config.py  mtbls_ws2_authentication_proxy.py
mtbls/infrastructure/auth/standalone/: standalone_authentication_config.py  standalone_authentication_service.py  standalone_authorization_service.py  standalone_identity_service.py
mtbls/resources/mdp/: column_model.tsv
mtbls/run/: config_renderer.py  config_utils.py  module_utils.py  subscribe.py
mtbls/run/cli/: log_filter.py  logging_config.py  main.py
resources/es/: study_model_schema_v1.0.json
resources/es/mappings/: assay_mappings.json  assignment_mappings.json  complete_study_search_index_mapping.json  complete_study_search_index_mappings.json  complete_study_search_index_settings.json  public_study_index_mapping.json  public_study_search_index_mapping.json  sample_kibana_public_mappings.json  sample_mappings.json  study_kibana_public_mappings.json  study_mappings.json
resources/validation-definitions/: validations.json
scripts/: create_mtbls_model.py  private_studies_will_be_released.py
search/: search_index.json
tests/data/config/: mtbls-base-config-secrets.yaml  mtbls-base-config.yaml  submission_base_config.yaml
tests/data/json/: control_lists.json  model_MTBLS1.json  model_MTBLS1_base.json  model_MTBLS5195.json  model_MTBLS5195_base.json  rule_definitions.json  templates.json
tests/data/sqlite/: init_db.py  initial_data.sql
tests/mtbls/application/: test_request_tracker.py
(+266 files in other folders)
